updated dates on csv

--- a/NFL.ipynb
+++ b/NFL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1628,7 @@
        "[125 rows x 15 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,10 +1638,8 @@
     "recdf= pd.DataFrame(receivingtable[1])\n",
     "reccolumnlist = receivingtable[0].values.tolist()[0]\n",
     "reccolumnlist.pop()\n",
-    "reccolumnlist\n",
     "recdf.columns = reccolumnlist\n",
-    "recdf\n",
-    "#receivingtable"
+    "recdf"
    ]
   },
   {
@@ -2655,10 +2653,7 @@
     "rushdf= pd.DataFrame(rushingtable[1])\n",
     "rushcolumnlist = rushingtable[0].values.tolist()[0]\n",
     "rushcolumnlist.pop()\n",
-    "#rushcolumnlist\n",
-    "rushdf.columns = rushcolumnlist\n",
-    "rushdf\n",
-    "#rushingtable"
+    "rushdf.columns = rushcolumnlist"
    ]
   },
   {
@@ -3884,9 +3879,7 @@
     "passdf= pd.DataFrame(passingtable[1])\n",
     "passcolumnlist = passingtable[0].values.tolist()[0]\n",
     "passcolumnlist.pop()\n",
-    "#rushcolumnlist\n",
-    "passdf.columns = passcolumnlist\n",
-    "passdf"
+    "passdf.columns = passcolumnlist"
    ]
   },
   {
