--- a/DataFrame.ipynb
+++ b/DataFrame.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\nicho\\Anaconda3\\lib\\site-packages\\fuzzywuzzy\\fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
+      "C:\\Users\\rirvi\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\fuzzywuzzy\\fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
       "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
      ]
     }
@@ -20,13 +20,13 @@
     "from bs4 import BeautifulSoup as bs\n",
     "import requests\n",
     "import time\n",
-    "from geopy import geocoders\n",
+    "#from geopy import geocoders\n",
     "\n",
     "# Import API key\n",
-    "from api_keys import api_key\n",
+    "#from api_keys import api_key\n",
     "\n",
     "# Incorporated citipy to determine city based on latitude and longitude\n",
-    "from citipy import citipy\n",
+    "#from citipy import citipy\n",
     "\n",
     "from fuzzywuzzy import fuzz\n",
     "from fuzzywuzzy import process"
@@ -83,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('2018_Schedule_City.csv')"
+    "data = pd.read_csv('./2018_Schedule_City.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,9 +102,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'team_names' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-ee8dea55cb63>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mawy\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'away_abrev'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0maway_abrev\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextract\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mawy\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mteam_names\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'team_names' is not defined"
+     ]
+    }
+   ],
    "source": [
     "away_abrev = []\n",
     "\n",
@@ -130,8 +142,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['away_abrev'] = away_abrev\n",
-    "data['home_abrev'] = home_abrev\n",
+    "home_abrev = []\n",
+    "\n",
+    "for hme in data['home_abrev']:\n",
+    "    home_abrev.append(process.extract(hme,team_names)[0][0])\n",
     "data"
    ]
   },
@@ -312,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
